force-app/main/default/objects/custom_create327__c/custom_create327__c.object-meta.xml
<CustomObject>
    <label>Custom created object327</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects327</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>