force-app/main/default/objects/custom_create327__c/fields/custom_create_327field522__c.field-meta.xml
<CustomField>
    <fullName>custom_create_327field522__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 327field522</label>
    <type>Checkbox</type>
</CustomField>