force-app/main/default/objects/custom_create327__c/fields/custom_create_327field530__c.field-meta.xml
<CustomField>
    <fullName>custom_create_327field530__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 327field530</label>
    <type>Checkbox</type>
</CustomField>